# Letsgophishing_pro

./: README.MD  README.md  main.py  pyproject.toml  requirements.txt  setup.sh  thezoo_integration.py
.github/workflows/: checkmarx.yml  codeql.yml  python-app.yml
config/: metasploit_config.rb  proxychains.conf
core/: email_sender.py  phishing.py  proxy_config.py  sms_sender.py
gui/: main_window.py  phishing_campaign.py
msf_wrapper/: __init__.py  client.py
payload/: custom_payloads.py  metasploit_payloads.py
tests/: test_client.py
